# matomo-analytics-sdk

./: .gitignore  CHANGELOG  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/matomo_analytics_sdk/: __about__.py  client.py  exceptions.py  models.py  modules.py  utils.py
src/matomo_analytics_sdk/files/: available_modules.json
tests/: __init__.py  test_sdk.py
tests/files/: 0_API_get.json  10_DevicesDetection_getType.json  11_UserCountry_getCity.json  1_Events_getAction.json  2_Events_getName.json  3_Events_getName.json  5_API_get.json  6_Events_getName.json  7_Events_getAction.json  8_Events_getCategory.json  9_Referrers_getReferrerType.json  API_get.json  CustomDimensions_getCustomDimension.json  DevicesDetection_getType.json  Events_getAction.json  Events_getCategory.json  Events_getName.json  Referrers_getReferrerType.json  UserCountry_getCity.json  WemapCustomReports_createReport.json  events_get_name.json  module_methods.json
